<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classic Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="high_scores_init">{\"Easy\":[\"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\"],\"Medium\":[\"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\"],\"Hard\":[\"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\"]}</string>
    <string name="load_games_init">{\"length\":\"0\"}</string>
    <string name="about_app_string">Classic Sudoku was created by Jeff Kennedy in 2015 as a way to exercise his love of code and his love of Sudoku. If anyone else claims they made this, they are a liar and should be scorned as such.</string>
    <string name="about_app_string2">Also, feel free to use, re-use, alter, or abuse this code to your heart\'s content. Just don\'t be a dick about it.</string>
    <string name="about_app_string3">\"Sudoku\" is a Japanese word that essentially means \"Single Number.\" Originally it was a French game called \"Number Place\" that first appeared in Le Siecle in 1892, but it only lasted about a decade before fading into obscurity.</string>
    <string name="about_app_string4">In the 1980\'s it was again popularized in Japan, with slightly different rules, under the name Sudoku and in the early 2000\'s grew into the worldwide phenomenon that it is today.</string>
    <string name="about_app_string5">The goal of Sudoku is to fill every row, column, and 3x3 zone with the numbers 1 to 9. There can be no repetitions. Simple as that sounds, it can actually be quite challenging!</string>
    <string name="about_app_string6">And with that out of the way, I wish you a Happy Sudokuing!</string>
    <string name="json_filename_id">filename</string>
    <string name="json_time_id">time</string>
    <string name="json_length_id">length</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="random">Random</string>
    <string name="autosave_filename">AutoSave.txt</string>
    <string name="you_win_msg">Game Over! You win!</string>

</resources>
